--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,198 @@
-pycaret
-fastapi
-uvicorn
-gunicorn
+aiofiles==0.7.0
+alembic==1.4.1
+aniso8601==7.0.0
+anyio @ file:///home/conda/feedstock_root/build_artifacts/anyio_1632754236664/work/dist
+argon2-cffi @ file:///home/conda/feedstock_root/build_artifacts/argon2-cffi_1610522573621/work
+asgiref==3.4.1
+async-generator==1.10
+attrs @ file:///home/conda/feedstock_root/build_artifacts/attrs_1620387926260/work
+Babel @ file:///home/conda/feedstock_root/build_artifacts/babel_1619719576210/work
+backcall @ file:///home/conda/feedstock_root/build_artifacts/backcall_1592338393461/work
+backports.functools-lru-cache @ file:///home/conda/feedstock_root/build_artifacts/backports.functools_lru_cache_1618230623929/work
+bleach @ file:///home/conda/feedstock_root/build_artifacts/bleach_1629908509068/work
+blis==0.7.4
+Boruta==0.3
+brotlipy==0.7.0
+catalogue==1.0.0
+certifi==2021.5.30
+cffi @ file:///home/conda/feedstock_root/build_artifacts/cffi_1631636250774/work
+chardet @ file:///home/conda/feedstock_root/build_artifacts/chardet_1610093492116/work
+charset-normalizer @ file:///home/conda/feedstock_root/build_artifacts/charset-normalizer_1626371162869/work
+click==8.0.1
+cloudpickle==2.0.0
+colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1602866480661/work
+colorlover==0.3.0
+conda==4.10.3
+conda-package-handling @ file:///home/conda/feedstock_root/build_artifacts/conda-package-handling_1618231390031/work
+cryptography @ file:///home/conda/feedstock_root/build_artifacts/cryptography_1616851485986/work
+cufflinks==0.17.3
+cycler==0.10.0
+cymem==2.0.5
+databricks-cli==0.15.0
+debugpy @ file:///home/conda/feedstock_root/build_artifacts/debugpy_1627074853231/work
+decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1631346842025/work
+defusedxml @ file:///home/conda/feedstock_root/build_artifacts/defusedxml_1615232257335/work
+dnspython==2.1.0
+docker==5.0.2
+email-validator==1.1.3
+entrypoints @ file:///home/conda/feedstock_root/build_artifacts/entrypoints_1602701735325/work/dist/entrypoints-0.3-py2.py3-none-any.whl
+fastapi==0.68.2
+Flask==2.0.2
+funcy==1.16
+future==0.18.2
+gensim==3.8.3
+gitdb==4.0.7
+GitPython==3.1.24
+graphene==2.1.9
+graphql-core==2.3.2
+graphql-relay==2.0.1
+greenlet==1.1.2
+gunicorn==20.1.0
+h11==0.12.0
+h2==4.1.0
+hpack==4.0.0
+htmlmin==0.1.12
+httptools==0.2.0
+Hypercorn==0.11.2
+hyperframe==6.0.1
+idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1609836280497/work
+ImageHash==4.2.1
+imbalanced-learn==0.7.0
+importlib-metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1630267473458/work
+ipykernel @ file:///home/conda/feedstock_root/build_artifacts/ipykernel_1631291098355/work/dist/ipykernel-6.4.1-py3-none-any.whl
+ipython @ file:///home/conda/feedstock_root/build_artifacts/ipython_1632763773116/work
+ipython-genutils==0.2.0
+ipywidgets==7.6.5
+itsdangerous==1.1.0
+jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1610146787869/work
+Jinja2==2.11.3
+joblib @ file:///home/conda/feedstock_root/build_artifacts/joblib_1612898609989/work
+json5 @ file:///home/conda/feedstock_root/build_artifacts/json5_1600692310011/work
+jsonschema @ file:///home/conda/feedstock_root/build_artifacts/jsonschema_1633119270293/work
+jupyter-client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1615693636836/work
+jupyter-core @ file:///home/conda/feedstock_root/build_artifacts/jupyter_core_1631852705892/work
+jupyter-server @ file:///home/conda/feedstock_root/build_artifacts/jupyter_server_1633398189934/work
+jupyterlab @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_1632816411212/work
+jupyterlab-pygments @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_pygments_1601375948261/work
+jupyterlab-server @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_server_1632590716858/work
+jupyterlab-widgets==1.0.2
+kiwisolver==1.3.2
+kmodes==0.11.0
+lightgbm==3.2.1
+llvmlite==0.36.0
+Mako==1.1.5
+mamba @ file:///home/conda/feedstock_root/build_artifacts/mamba_1632770295204/work
+MarkupSafe @ file:///home/conda/feedstock_root/build_artifacts/markupsafe_1621455668600/work
+matplotlib==3.4.3
+matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1631080358261/work
+missingno==0.5.0
+mistune @ file:///home/conda/feedstock_root/build_artifacts/mistune_1624941317779/work
+mlflow==1.20.2
+mlxtend==0.19.0
+multimethod==1.6
+murmurhash==1.0.5
+nbclassic @ file:///home/conda/feedstock_root/build_artifacts/nbclassic_1631880505492/work
+nbclient @ file:///home/conda/feedstock_root/build_artifacts/nbclient_1629120697898/work
+nbconvert @ file:///home/conda/feedstock_root/build_artifacts/nbconvert_1632535927841/work
+nbformat @ file:///home/conda/feedstock_root/build_artifacts/nbformat_1617383142101/work
+nest-asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1617163391303/work
+networkx==2.6.3
+nltk==3.6.3
+notebook @ file:///home/conda/feedstock_root/build_artifacts/notebook_1631733685426/work
+numba==0.53.1
+numexpr==2.7.3
+numpy @ file:///home/conda/feedstock_root/build_artifacts/numpy_1626681925468/work
+orjson==3.6.4
+packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1625323647219/work
+pandas==1.3.3
+pandas-profiling==3.1.0
+pandocfilters @ file:///home/conda/feedstock_root/build_artifacts/pandocfilters_1631603243851/work
+parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1617148930513/work
+patsy==0.5.2
+pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1602535608087/work
+phik==0.12.0
+pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602535621604/work
+Pillow==8.3.2
+plac==1.1.3
+plotly==5.3.1
+preshed==3.0.5
+priority==2.0.0
+prometheus-client @ file:///home/conda/feedstock_root/build_artifacts/prometheus_client_1622586138406/work
+prometheus-flask-exporter==0.18.3
+promise==2.3
+prompt-toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1629903925368/work
+protobuf==3.18.0
+ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1609419310487/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
+pycaret==2.3.4
+pycosat @ file:///home/conda/feedstock_root/build_artifacts/pycosat_1610094799048/work
+pycparser @ file:///home/conda/feedstock_root/build_artifacts/pycparser_1593275161868/work
+pydantic==1.8.2
+Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1629119114968/work
+pyLDAvis==3.2.2
+pynndescent==0.5.4
+pyod==0.9.4
+pyOpenSSL @ file:///home/conda/feedstock_root/build_artifacts/pyopenssl_1633192417276/work
+pyparsing==2.4.7
+pyrsistent @ file:///home/conda/feedstock_root/build_artifacts/pyrsistent_1610146801554/work
+PySocks @ file:///home/conda/feedstock_root/build_artifacts/pysocks_1610291451001/work
+python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1626286286081/work
+python-dotenv==0.19.0
+python-editor==1.0.4
+python-multipart==0.0.5
+pytz @ file:///home/conda/feedstock_root/build_artifacts/pytz_1612179539967/work
+PyWavelets==1.1.1
+PyYAML==5.4.1
+pyzmq @ file:///home/conda/feedstock_root/build_artifacts/pyzmq_1631793304627/work
+querystring-parser==1.2.4
+regex==2021.9.30
+requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1626393743643/work
+requests-unixsocket==0.2.0
+ruamel-yaml-conda @ file:///home/conda/feedstock_root/build_artifacts/ruamel_yaml_1611943432947/work
+Rx==1.6.1
+scikit-learn==0.23.2
+scikit-plot==0.3.7
+scipy @ file:///home/conda/feedstock_root/build_artifacts/scipy_1604304774036/work
+seaborn==0.11.2
+Send2Trash @ file:///home/conda/feedstock_root/build_artifacts/send2trash_1628511208346/work
+six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
+smart-open==5.2.1
+smmap==4.0.0
+sniffio @ file:///home/conda/feedstock_root/build_artifacts/sniffio_1610318319523/work
+spacy==2.3.7
+SQLAlchemy==1.4.25
+sqlparse==0.4.2
+srsly==1.0.5
+starlette==0.14.2
+statsmodels==0.13.0
+tabulate==0.8.9
+tangled-up-in-unicode==0.1.0
+tenacity==8.0.1
+terminado @ file:///home/conda/feedstock_root/build_artifacts/terminado_1631128166466/work
+testpath @ file:///home/conda/feedstock_root/build_artifacts/testpath_1621261527237/work
+textblob==0.15.3
+thinc==7.4.5
+threadpoolctl @ file:///home/conda/feedstock_root/build_artifacts/threadpoolctl_1633102299089/work
+toml==0.10.2
+tornado @ file:///home/conda/feedstock_root/build_artifacts/tornado_1610094708661/work
+tqdm @ file:///home/conda/feedstock_root/build_artifacts/tqdm_1632160078689/work
+traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1630423529112/work
+typing-extensions==3.10.0.2
+ujson==4.2.0
+umap-learn==0.5.1
+urllib3 @ file:///home/conda/feedstock_root/build_artifacts/urllib3_1632350318291/work
+uvicorn==0.15.0
+uvloop==0.16.0
+visions==0.7.4
+voila @ file:///home/conda/feedstock_root/build_artifacts/voila_1633373698191/work
+wasabi==0.8.2
+watchgod==0.7
+wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1600965781394/work
+webencodings==0.5.1
+websocket-client @ file:///home/conda/feedstock_root/build_artifacts/websocket-client_1610127648202/work
+websockets==10.0
+Werkzeug==2.0.1
+widgetsnbextension==3.5.1
+wordcloud==1.8.1
+wsproto==1.0.0
+yellowbrick==1.3.post1
+zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1633302054558/work
