--- a/requirements.txt
+++ b/requirements.txt
@@ -1,198 +1,253 @@
-aiofiles==0.7.0
-alembic==1.4.1
-aniso8601==7.0.0
-anyio @ file:///home/conda/feedstock_root/build_artifacts/anyio_1632754236664/work/dist
-argon2-cffi @ file:///home/conda/feedstock_root/build_artifacts/argon2-cffi_1610522573621/work
-asgiref==3.4.1
-async-generator==1.10
-attrs @ file:///home/conda/feedstock_root/build_artifacts/attrs_1620387926260/work
-Babel @ file:///home/conda/feedstock_root/build_artifacts/babel_1619719576210/work
-backcall @ file:///home/conda/feedstock_root/build_artifacts/backcall_1592338393461/work
-backports.functools-lru-cache @ file:///home/conda/feedstock_root/build_artifacts/backports.functools_lru_cache_1618230623929/work
-bleach @ file:///home/conda/feedstock_root/build_artifacts/bleach_1629908509068/work
-blis==0.7.4
-Boruta==0.3
-brotlipy==0.7.0
-catalogue==1.0.0
-certifi==2021.5.30
-cffi @ file:///home/conda/feedstock_root/build_artifacts/cffi_1631636250774/work
-chardet @ file:///home/conda/feedstock_root/build_artifacts/chardet_1610093492116/work
-charset-normalizer @ file:///home/conda/feedstock_root/build_artifacts/charset-normalizer_1626371162869/work
-click==8.0.1
-cloudpickle==2.0.0
-colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1602866480661/work
-colorlover==0.3.0
-conda==4.10.3
-conda-package-handling @ file:///home/conda/feedstock_root/build_artifacts/conda-package-handling_1618231390031/work
-cryptography @ file:///home/conda/feedstock_root/build_artifacts/cryptography_1616851485986/work
-cufflinks==0.17.3
-cycler==0.10.0
-cymem==2.0.5
-databricks-cli==0.15.0
-debugpy @ file:///home/conda/feedstock_root/build_artifacts/debugpy_1627074853231/work
-decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1631346842025/work
-defusedxml @ file:///home/conda/feedstock_root/build_artifacts/defusedxml_1615232257335/work
-dnspython==2.1.0
-docker==5.0.2
-email-validator==1.1.3
-entrypoints @ file:///home/conda/feedstock_root/build_artifacts/entrypoints_1602701735325/work/dist/entrypoints-0.3-py2.py3-none-any.whl
-fastapi==0.68.2
-Flask==2.0.2
-funcy==1.16
-future==0.18.2
-gensim==3.8.3
-gitdb==4.0.7
-GitPython==3.1.24
-graphene==2.1.9
-graphql-core==2.3.2
-graphql-relay==2.0.1
-greenlet==1.1.2
-gunicorn==20.1.0
-h11==0.12.0
-h2==4.1.0
-hpack==4.0.0
-htmlmin==0.1.12
-httptools==0.2.0
-Hypercorn==0.11.2
-hyperframe==6.0.1
-idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1609836280497/work
-ImageHash==4.2.1
-imbalanced-learn==0.7.0
-importlib-metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1630267473458/work
-ipykernel @ file:///home/conda/feedstock_root/build_artifacts/ipykernel_1631291098355/work/dist/ipykernel-6.4.1-py3-none-any.whl
-ipython @ file:///home/conda/feedstock_root/build_artifacts/ipython_1632763773116/work
-ipython-genutils==0.2.0
-ipywidgets==7.6.5
-itsdangerous==1.1.0
-jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1610146787869/work
-Jinja2==2.11.3
-joblib @ file:///home/conda/feedstock_root/build_artifacts/joblib_1612898609989/work
-json5 @ file:///home/conda/feedstock_root/build_artifacts/json5_1600692310011/work
-jsonschema @ file:///home/conda/feedstock_root/build_artifacts/jsonschema_1633119270293/work
-jupyter-client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1615693636836/work
-jupyter-core @ file:///home/conda/feedstock_root/build_artifacts/jupyter_core_1631852705892/work
-jupyter-server @ file:///home/conda/feedstock_root/build_artifacts/jupyter_server_1633398189934/work
-jupyterlab @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_1632816411212/work
-jupyterlab-pygments @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_pygments_1601375948261/work
-jupyterlab-server @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_server_1632590716858/work
-jupyterlab-widgets==1.0.2
-kiwisolver==1.3.2
-kmodes==0.11.0
-lightgbm==3.2.1
-llvmlite==0.36.0
-Mako==1.1.5
-mamba @ file:///home/conda/feedstock_root/build_artifacts/mamba_1632770295204/work
-MarkupSafe @ file:///home/conda/feedstock_root/build_artifacts/markupsafe_1621455668600/work
-matplotlib==3.4.3
-matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1631080358261/work
-missingno==0.5.0
-mistune @ file:///home/conda/feedstock_root/build_artifacts/mistune_1624941317779/work
-mlflow==1.20.2
-mlxtend==0.19.0
-multimethod==1.6
-murmurhash==1.0.5
-nbclassic @ file:///home/conda/feedstock_root/build_artifacts/nbclassic_1631880505492/work
-nbclient @ file:///home/conda/feedstock_root/build_artifacts/nbclient_1629120697898/work
-nbconvert @ file:///home/conda/feedstock_root/build_artifacts/nbconvert_1632535927841/work
-nbformat @ file:///home/conda/feedstock_root/build_artifacts/nbformat_1617383142101/work
-nest-asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1617163391303/work
-networkx==2.6.3
-nltk==3.6.3
-notebook @ file:///home/conda/feedstock_root/build_artifacts/notebook_1631733685426/work
-numba==0.53.1
-numexpr==2.7.3
-numpy @ file:///home/conda/feedstock_root/build_artifacts/numpy_1626681925468/work
-orjson==3.6.4
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1625323647219/work
-pandas==1.3.3
-pandas-profiling==3.1.0
-pandocfilters @ file:///home/conda/feedstock_root/build_artifacts/pandocfilters_1631603243851/work
-parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1617148930513/work
-patsy==0.5.2
-pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1602535608087/work
-phik==0.12.0
-pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602535621604/work
-Pillow==8.3.2
-plac==1.1.3
-plotly==5.3.1
-preshed==3.0.5
-priority==2.0.0
-prometheus-client @ file:///home/conda/feedstock_root/build_artifacts/prometheus_client_1622586138406/work
-prometheus-flask-exporter==0.18.3
-promise==2.3
-prompt-toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1629903925368/work
-protobuf==3.18.0
-ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1609419310487/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-pycaret==2.3.4
-pycosat @ file:///home/conda/feedstock_root/build_artifacts/pycosat_1610094799048/work
-pycparser @ file:///home/conda/feedstock_root/build_artifacts/pycparser_1593275161868/work
-pydantic==1.8.2
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1629119114968/work
-pyLDAvis==3.2.2
-pynndescent==0.5.4
-pyod==0.9.4
-pyOpenSSL @ file:///home/conda/feedstock_root/build_artifacts/pyopenssl_1633192417276/work
-pyparsing==2.4.7
-pyrsistent @ file:///home/conda/feedstock_root/build_artifacts/pyrsistent_1610146801554/work
-PySocks @ file:///home/conda/feedstock_root/build_artifacts/pysocks_1610291451001/work
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1626286286081/work
-python-dotenv==0.19.0
-python-editor==1.0.4
-python-multipart==0.0.5
-pytz @ file:///home/conda/feedstock_root/build_artifacts/pytz_1612179539967/work
-PyWavelets==1.1.1
-PyYAML==5.4.1
-pyzmq @ file:///home/conda/feedstock_root/build_artifacts/pyzmq_1631793304627/work
-querystring-parser==1.2.4
-regex==2021.9.30
-requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1626393743643/work
-requests-unixsocket==0.2.0
-ruamel-yaml-conda @ file:///home/conda/feedstock_root/build_artifacts/ruamel_yaml_1611943432947/work
-Rx==1.6.1
-scikit-learn==0.23.2
-scikit-plot==0.3.7
-scipy @ file:///home/conda/feedstock_root/build_artifacts/scipy_1604304774036/work
-seaborn==0.11.2
-Send2Trash @ file:///home/conda/feedstock_root/build_artifacts/send2trash_1628511208346/work
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
-smart-open==5.2.1
-smmap==4.0.0
-sniffio @ file:///home/conda/feedstock_root/build_artifacts/sniffio_1610318319523/work
-spacy==2.3.7
-SQLAlchemy==1.4.25
-sqlparse==0.4.2
-srsly==1.0.5
-starlette==0.14.2
-statsmodels==0.13.0
-tabulate==0.8.9
-tangled-up-in-unicode==0.1.0
-tenacity==8.0.1
-terminado @ file:///home/conda/feedstock_root/build_artifacts/terminado_1631128166466/work
-testpath @ file:///home/conda/feedstock_root/build_artifacts/testpath_1621261527237/work
-textblob==0.15.3
-thinc==7.4.5
-threadpoolctl @ file:///home/conda/feedstock_root/build_artifacts/threadpoolctl_1633102299089/work
-toml==0.10.2
-tornado @ file:///home/conda/feedstock_root/build_artifacts/tornado_1610094708661/work
-tqdm @ file:///home/conda/feedstock_root/build_artifacts/tqdm_1632160078689/work
-traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1630423529112/work
-typing-extensions==3.10.0.2
-ujson==4.2.0
-umap-learn==0.5.1
-urllib3 @ file:///home/conda/feedstock_root/build_artifacts/urllib3_1632350318291/work
-uvicorn==0.15.0
-uvloop==0.16.0
-visions==0.7.4
-voila @ file:///home/conda/feedstock_root/build_artifacts/voila_1633373698191/work
-wasabi==0.8.2
-watchgod==0.7
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1600965781394/work
-webencodings==0.5.1
-websocket-client @ file:///home/conda/feedstock_root/build_artifacts/websocket-client_1610127648202/work
-websockets==10.0
-Werkzeug==2.0.1
-widgetsnbextension==3.5.1
-wordcloud==1.8.1
-wsproto==1.0.0
-yellowbrick==1.3.post1
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1633302054558/work
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: linux-64
+_libgcc_mutex=0.1=conda_forge
+_openmp_mutex=4.5=1_gnu
+aiofiles=0.7.0=pypi_0
+alembic=1.4.1=pypi_0
+aniso8601=7.0.0=pypi_0
+anyio=3.3.2=py39hf3d152e_0
+argon2-cffi=20.1.0=py39h3811e60_2
+asgiref=3.4.1=pypi_0
+async_generator=1.10=py_0
+attrs=21.2.0=pyhd8ed1ab_0
+babel=2.9.1=pyh44b312d_0
+backcall=0.2.0=pyh9f0ad1d_0
+backports=1.0=py_2
+backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
+bleach=4.1.0=pyhd8ed1ab_0
+blis=0.7.4=pypi_0
+boruta=0.3=pypi_0
+brotlipy=0.7.0=py39h3811e60_1001
+bzip2=1.0.8=h7f98852_4
+c-ares=1.17.2=h7f98852_0
+ca-certificates=2021.5.30=ha878542_0
+catalogue=1.0.0=pypi_0
+certifi=2021.5.30=py39hf3d152e_0
+cffi=1.14.6=py39h4bc2ebd_1
+chardet=4.0.0=py39hf3d152e_1
+charset-normalizer=2.0.0=pyhd8ed1ab_0
+click=8.0.1=pypi_0
+cloudpickle=2.0.0=pypi_0
+colorama=0.4.4=pyh9f0ad1d_0
+colorlover=0.3.0=pypi_0
+conda=4.10.3=py39hf3d152e_2
+conda-package-handling=1.7.3=py39h3811e60_0
+cryptography=3.4.7=py39hbca0aa6_0
+cufflinks=0.17.3=pypi_0
+cycler=0.10.0=pypi_0
+cymem=2.0.5=pypi_0
+databricks-cli=0.15.0=pypi_0
+debugpy=1.4.1=py39he80948d_0
+decorator=5.1.0=pyhd8ed1ab_0
+defusedxml=0.7.1=pyhd8ed1ab_0
+dnspython=2.1.0=pypi_0
+docker=5.0.2=pypi_0
+email-validator=1.1.3=pypi_0
+entrypoints=0.3=py39hde42818_1002
+fastapi=0.68.2=pypi_0
+funcy=1.16=pypi_0
+future=0.18.2=pypi_0
+gensim=3.8.3=pypi_0
+gitdb=4.0.7=pypi_0
+gitpython=3.1.24=pypi_0
+graphene=2.1.9=pypi_0
+graphql-core=2.3.2=pypi_0
+graphql-relay=2.0.1=pypi_0
+greenlet=1.1.2=pypi_0
+gunicorn=20.1.0=pypi_0
+h11=0.12.0=pypi_0
+h2=4.1.0=pypi_0
+hpack=4.0.0=pypi_0
+htmlmin=0.1.12=pypi_0
+httptools=0.2.0=pypi_0
+hypercorn=0.11.2=pypi_0
+hyperframe=6.0.1=pypi_0
+icu=68.1=h58526e2_0
+idna=3.1=pyhd3deb0d_0
+imagehash=4.2.1=pypi_0
+imbalanced-learn=0.7.0=pypi_0
+importlib-metadata=4.8.1=py39hf3d152e_0
+ipykernel=6.4.1=py39hef51801_0
+ipython=7.28.0=py39hef51801_0
+ipython_genutils=0.2.0=py_1
+ipywidgets=7.6.5=pypi_0
+itsdangerous=1.1.0=pypi_0
+jedi=0.18.0=py39hf3d152e_2
+jinja2=2.11.3=pypi_0
+joblib=1.0.1=pyhd8ed1ab_0
+json5=0.9.5=pyh9f0ad1d_0
+jsonschema=4.0.1=pyhd8ed1ab_0
+jupyter_client=6.1.12=pyhd8ed1ab_0
+jupyter_core=4.8.1=py39hf3d152e_0
+jupyter_server=1.11.1=pyhd8ed1ab_0
+jupyterlab=3.1.14=pyhd8ed1ab_0
+jupyterlab-widgets=1.0.2=pypi_0
+jupyterlab_pygments=0.1.2=pyh9f0ad1d_0
+jupyterlab_server=2.8.2=pyhd8ed1ab_0
+kiwisolver=1.3.2=pypi_0
+kmodes=0.11.0=pypi_0
+krb5=1.19.2=hcc1bbae_2
+ld_impl_linux-64=2.36.1=hea4e1c9_2
+libarchive=3.5.2=hccf745f_1
+libblas=3.9.0=11_linux64_openblas
+libcblas=3.9.0=11_linux64_openblas
+libcurl=7.79.1=h2574ce0_1
+libedit=3.1.20191231=he28a2e2_2
+libev=4.33=h516909a_1
+libffi=3.4.2=h9c3ff4c_4
+libgcc-ng=11.2.0=h1d223b6_9
+libgfortran-ng=11.2.0=h69a702a_9
+libgfortran5=11.2.0=h5c6108e_9
+libgomp=11.2.0=h1d223b6_9
+libiconv=1.16=h516909a_0
+liblapack=3.9.0=11_linux64_openblas
+libnghttp2=1.43.0=h812cca2_1
+libopenblas=0.3.17=pthreads_h8fe5266_1
+libsodium=1.0.18=h36c2ea0_1
+libsolv=0.7.19=h780b84a_5
+libssh2=1.10.0=ha56f1ee_2
+libstdcxx-ng=11.2.0=he4da1e4_9
+libuv=1.42.0=h7f98852_0
+libxml2=2.9.12=h72842e0_0
+libzlib=1.2.11=h36c2ea0_1013
+lightgbm=3.2.1=pypi_0
+llvmlite=0.36.0=pypi_0
+lz4-c=1.9.3=h9c3ff4c_1
+lzo=2.10=h516909a_1000
+mako=1.1.5=pypi_0
+mamba=0.16.0=py39h951de11_0
+markupsafe=2.0.1=py39h3811e60_0
+matplotlib=3.4.3=pypi_0
+matplotlib-inline=0.1.3=pyhd8ed1ab_0
+missingno=0.5.0=pypi_0
+mistune=0.8.4=py39h3811e60_1004
+mlflow=1.20.2=pypi_0
+mlxtend=0.19.0=pypi_0
+multimethod=1.6=pypi_0
+murmurhash=1.0.5=pypi_0
+nbclassic=0.3.2=pyhd8ed1ab_0
+nbclient=0.5.4=pyhd8ed1ab_0
+nbconvert=6.2.0=py39hf3d152e_0
+nbformat=5.1.3=pyhd8ed1ab_0
+ncurses=6.2=h58526e2_4
+nest-asyncio=1.5.1=pyhd8ed1ab_0
+networkx=2.6.3=pypi_0
+nltk=3.6.3=pypi_0
+nodejs=16.10.0=h92b4a50_1
+notebook=6.4.4=pyha770c72_0
+numba=0.53.1=pypi_0
+numexpr=2.7.3=pypi_0
+numpy=1.19.5=py39hdbf815f_2
+openssl=1.1.1l=h7f98852_0
+orjson=3.6.4=pypi_0
+packaging=21.0=pyhd8ed1ab_0
+pandas=1.3.3=pypi_0
+pandas-profiling=3.1.0=pypi_0
+pandoc=2.14.2=h7f98852_0
+pandocfilters=1.5.0=pyhd8ed1ab_0
+parso=0.8.2=pyhd8ed1ab_0
+patsy=0.5.2=pypi_0
+pexpect=4.8.0=pyh9f0ad1d_2
+phik=0.12.0=pypi_0
+pickleshare=0.7.5=py39hde42818_1002
+pillow=8.3.2=pypi_0
+pip=21.2.4=pyhd8ed1ab_0
+plac=1.1.3=pypi_0
+plotly=5.3.1=pypi_0
+preshed=3.0.5=pypi_0
+priority=2.0.0=pypi_0
+prometheus-flask-exporter=0.18.3=pypi_0
+prometheus_client=0.11.0=pyhd8ed1ab_0
+promise=2.3=pypi_0
+prompt-toolkit=3.0.20=pyha770c72_0
+protobuf=3.18.0=pypi_0
+ptyprocess=0.7.0=pyhd3deb0d_0
+pycaret=2.3.4=pypi_0
+pycosat=0.6.3=py39h3811e60_1006
+pycparser=2.20=pyh9f0ad1d_2
+pydantic=1.8.2=pypi_0
+pygments=2.10.0=pyhd8ed1ab_0
+pyldavis=3.2.2=pypi_0
+pynndescent=0.5.4=pypi_0
+pyod=0.9.4=pypi_0
+pyopenssl=21.0.0=pyhd8ed1ab_0
+pyparsing=2.4.7=pyh9f0ad1d_0
+pyrsistent=0.17.3=py39h3811e60_2
+pysocks=1.7.1=py39hf3d152e_3
+python=3.9.7=hb7a2778_3_cpython
+python-dateutil=2.8.2=pyhd8ed1ab_0
+python-dotenv=0.19.0=pypi_0
+python-editor=1.0.4=pypi_0
+python-multipart=0.0.5=pypi_0
+python_abi=3.9=2_cp39
+pytz=2021.1=pyhd8ed1ab_0
+pywavelets=1.1.1=pypi_0
+pyyaml=5.4.1=pypi_0
+pyzmq=22.3.0=py39h37b5a0c_0
+querystring-parser=1.2.4=pypi_0
+readline=8.1=h46c0cb4_0
+regex=2021.9.30=pypi_0
+reproc=14.2.3=h7f98852_0
+reproc-cpp=14.2.3=h9c3ff4c_0
+requests=2.26.0=pyhd8ed1ab_0
+requests-unixsocket=0.2.0=py_0
+ruamel_yaml=0.15.80=py39h3811e60_1004
+rx=1.6.1=pypi_0
+scikit-learn=0.23.2=pypi_0
+scikit-plot=0.3.7=pypi_0
+scipy=1.5.3=py39hee8e79c_0
+seaborn=0.11.2=pypi_0
+send2trash=1.8.0=pyhd8ed1ab_0
+setuptools=58.0.4=py39hf3d152e_2
+six=1.16.0=pyh6c4a22f_0
+smart-open=5.2.1=pypi_0
+smmap=4.0.0=pypi_0
+sniffio=1.2.0=py39hf3d152e_1
+spacy=2.3.7=pypi_0
+sqlalchemy=1.4.25=pypi_0
+sqlite=3.36.0=h9cd32fc_2
+sqlparse=0.4.2=pypi_0
+srsly=1.0.5=pypi_0
+starlette=0.14.2=pypi_0
+statsmodels=0.13.0=pypi_0
+tabulate=0.8.9=pypi_0
+tangled-up-in-unicode=0.1.0=pypi_0
+tenacity=8.0.1=pypi_0
+terminado=0.12.1=py39hf3d152e_0
+testpath=0.5.0=pyhd8ed1ab_0
+textblob=0.15.3=pypi_0
+thinc=7.4.5=pypi_0
+threadpoolctl=3.0.0=pyh8a188c0_0
+tk=8.6.11=h27826a3_1
+toml=0.10.2=pypi_0
+tornado=6.1=py39h3811e60_1
+tqdm=4.62.3=pyhd8ed1ab_0
+traitlets=5.1.0=pyhd8ed1ab_0
+typing-extensions=3.10.0.2=pypi_0
+tzdata=2021b=he74cb21_0
+ujson=4.2.0=pypi_0
+umap-learn=0.5.1=pypi_0
+urllib3=1.26.7=pyhd8ed1ab_0
+uvicorn=0.15.0=pypi_0
+uvloop=0.16.0=pypi_0
+visions=0.7.4=pypi_0
+voila=0.2.16=pyhd8ed1ab_0
+wasabi=0.8.2=pypi_0
+watchgod=0.7=pypi_0
+wcwidth=0.2.5=pyh9f0ad1d_2
+webencodings=0.5.1=py_1
+websocket-client=0.57.0=py39hf3d152e_4
+websockets=10.0=pypi_0
+werkzeug=2.0.1=pypi_0
+wheel=0.37.0=pyhd8ed1ab_1
+widgetsnbextension=3.5.1=pypi_0
+wordcloud=1.8.1=pypi_0
+wsproto=1.0.0=pypi_0
+xz=5.2.5=h516909a_1
+yaml=0.2.5=h516909a_0
+yellowbrick=1.3.post1=pypi_0
+zeromq=4.3.4=h9c3ff4c_1
+zipp=3.6.0=pyhd8ed1ab_0
+zlib=1.2.11=h36c2ea0_1013
+zstd=1.5.0=ha95c52a_0
